# YOLOX-ROS

./: README.md
.github/workflows/: ci_foxy.yml  ci_humble.yml  ci_iron.yml  ci_jazzy.yml  ci_rolling.yml
weights/onnx/: download.bash
weights/tensorrt/: convert.bash
yolox_ros_cpp/: README.md
yolox_ros_cpp/docker/onnxruntime/: docker-compose.yaml  dockerfile
yolox_ros_cpp/docker/openvino/: docker-compose.yaml  dockerfile
yolox_ros_cpp/docker/tensorrt/: docker-compose.yaml  dockerfile  ros_entrypoint.sh
yolox_ros_cpp/yolox_cpp/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_cpp/include/yolox_cpp/: coco_names.hpp  core.hpp  utils.hpp  yolox_onnxruntime.hpp  yolox_openvino.hpp  yolox_tensorrt.hpp  yolox_tflite.hpp
yolox_ros_cpp/yolox_cpp/src/: yolox_onnxruntime.cpp  yolox_openvino.cpp  yolox_tensorrt.cpp  yolox_tflite.cpp
yolox_ros_cpp/yolox_param/: package.xml
yolox_ros_cpp/yolox_param/src/: yolox_parameters.yaml
yolox_ros_cpp/yolox_ros_cpp/: package.xml
yolox_ros_cpp/yolox_ros_cpp/include/yolox_ros_cpp/: yolox_ros_cpp.hpp
yolox_ros_cpp/yolox_ros_cpp/launch/: yolox_onnxruntime.launch.py  yolox_openvino.launch.py  yolox_tensorrt.launch.py  yolox_tflite.launch.py
yolox_ros_cpp/yolox_ros_cpp/src/: yolox_ros_cpp.cpp
